# EmbeddedLinuxFWUpdates

./: README.md
DeviceClient/ArtifactParser/: ArtifactParser.cpp  ArtifactParser.h
DeviceClient/Client/: CMakeLists.txt  Downloader.cpp  Downloader.h  Main.cpp
DeviceClient/ImageWriter/: CMakeLists.txt  Writer.cpp  Writer.h
DeviceClient/Test/: writer_test.cpp
meta-update/: README
meta-update/wic/: sdimage-raspberrypi-dualrootfs.wks
